--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,11 @@ steps:
     archiveType: 'zip'
     archiveFile: '$(System.DefaultWorkingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
+
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'Azure for Students(cd925e36-2a91-4f4c-b7ab-1e576b911b9b)'
-    appName: 
-    package: '$(System.DefaultWorkingDirectory)/*.zip'
+    appType: 'webApp'
+    appName: 'DevOpsAssignment1WebApp'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
